--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-# NODE_ENV="development"
-NODE_ENV="production"
+NODE_ENV="development"
+# NODE_ENV="production"
 # NODE_ENV="production"
 
 DATABASE_URL="mongodb+srv://daniel:team23@team23.vvpheur.mongodb.net/?retryWrites=true&w=majority&appName=Team23"
